# agentparty

./: .gitignore  LICENSE  README.md  README.zh.md  install.ps1  install.sh  package.json  tsconfig.json
.github/workflows/: release.yml
cli/: package.json  tsconfig.json
cli/src/: args.ts  client.ts  config.ts  format.ts  index.ts  oidc-cli.ts  reach.ts  rest.ts  statusline-cache.ts  upgrade.ts
cli/test/: account-commands.test.ts  account.test.ts  args.test.ts  cli.test.ts  client.test.ts  config.test.ts  format.test.ts  json-contract.test.ts  m3.test.ts  mock-server.ts  oidc-mock.ts  reach.test.ts  rest-mock.ts  serve.test.ts  statusline-cache.test.ts  watch.test.ts  who.test.ts
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: party-etiquette.md  self-host-notes.md  statusline-contract.md
scripts/: build-binaries.sh  desktop-release-workflow.test.ts  desktop-update-manifest.test.ts  desktop-update-manifest.ts  live-identity-isolation.fail-v0.2.2.txt  live-identity-isolation.html  live-identity-isolation.sh  release-version.test.ts  release-version.ts  release.sh  tsconfig.json
shared/: package.json
shared/src/: protocol.ts
skills/agentparty/: SKILL.md
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  router.ts  state.test.ts  state.ts
worker/: package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc  wrangler.xdream.jsonc
worker/migrations/: 0001_init.sql  (+13 more)
(+163 files in other folders)
